branches/wip/Archive/fa6c05138ad4832949df0308fff85851-3cc51038acdf411e9e246d8e44b62017/output
+ clang++ -O2 -pthread main.cpp
main.cpp:9:9: error: expected ';' at end of declaration
   Foo o{1, 2};
        ^
        ;
1 error generated.
